main.css
body{
	margin: 0;
}	

#game_view{
	position: absolute;
	width: 100%;
	top:50px;
	bottom: 0;
	background-color: #4286f4;
}

.topbar{
	position: fixed;
	width: 100%;
	height: 50px;
	background-color: #212323;
	color: white;
	line-height: 50px;
	font-size: 30px;
	font-family: 'Saira Semi Condensed', sans-serif;
}

#logo{
	position: relative;
	left: 10px;
}

#start_screen{
	position: absolute;
	top: 0;
	bottom: 0;
	right: 0;
	left: 0;
}

#username{
	position: absolute;
	top: 20px;
	left: 20px;
	z-index: -1;
}

#scores{
	position: absolute;
	top: 20px;
	right: 20px;
	z-index: -1; 
}

#game_name{
	position: absolute;
	z-index: 1;
	top: 20%;
	width: 100%;
	height: 50px;
	text-align: center;
	line-height: 50px;
	font-size: 50px;
}

#name_input{
	position: absolute;
	z-index: 1;
	top: 40%;
	left: 40%;
	right: 40%;
}

#name{
	width: 100%;
	height: 30px;
	font-size: 25px;
	line-height: 30px;
	text-align: center;
}

input{
	-webkit-box-shadow: none;
    -moz-box-shadow: none;
}

#play_button{
	position: absolute;
	z-index: -1;
	top: 40%;
	left: 46%;
	right: 46%;
}

#play{
	width: 100%;
}

#alert{
	position: absolute;
	left: 30%;
	right: 30%;
	top: 60%;
	z-index: 1;
	text-align: center;
}

#canvas{
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: white;
}

